[project]
name = "ga-lp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pulp>=2.9.0",
    "pygame>=2.6.1",
    "pymunk>=7.2.0",
    "rich>=14.2.0",
    "scipy>=1.15.0",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]
